[package]
name = "ohohoh"
description = "Advent of Code 2019 exercises"
version = "0.1.0"
authors = ["Jean-Loup Adde <jean-loup.adde@juanwolf.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"